info.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from src/Compiler/Parser/Grammar.y
-----------------------------------------------------------------------------

state 5 contains 1 shift/reduce conflicts.
state 6 contains 1 shift/reduce conflicts.
state 7 contains 1 shift/reduce conflicts.
state 8 contains 1 shift/reduce conflicts.
state 100 contains 3 reduce/reduce conflicts.
state 168 contains 1 shift/reduce conflicts.
state 171 contains 1 shift/reduce conflicts.
state 228 contains 1 shift/reduce conflicts.
state 259 contains 2 reduce/reduce conflicts.
state 293 contains 1 shift/reduce conflicts.

rule 4 is unused
rule 90 is unused
rule 91 is unused
rule 92 is unused
rule 93 is unused
rule 94 is unused
rule 95 is unused
rule 96 is unused
rule 97 is unused
rule 98 is unused
rule 99 is unused
rule 100 is unused
rule 101 is unused
rule 102 is unused
rule 103 is unused
rule 104 is unused
rule 105 is unused
rule 106 is unused
rule 107 is unused
rule 108 is unused
rule 109 is unused
rule 110 is unused
rule 111 is unused
rule 112 is unused
rule 113 is unused
rule 114 is unused
rule 115 is unused
rule 116 is unused
rule 148 is unused
rule 149 is unused
rule 164 is unused

terminal for is unused
terminal struct is unused
terminal union is unused
terminal enum is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_clike -> TranslationUnit                    (0)
	TranslationUnit -> TranslationUnitI                (1)
	TranslationUnitI -> ExternalDeclaration            (2)
	TranslationUnitI -> TranslationUnitI ExternalDeclaration   (3)
	ConstExpr -> ConditionalExpr                       (4)
	PrimaryExpr -> ident                               (5)
	PrimaryExpr -> literal                             (6)
	PrimaryExpr -> '(' Expr ')'                        (7)
	PostfixExpr -> PrimaryExpr                         (8)
	PostfixExpr -> PostfixExpr '[' Expr ']'            (9)
	PostfixExpr -> PostfixExpr '(' ')'                 (10)
	PostfixExpr -> PostfixExpr '(' ArgExprList ')'     (11)
	PostfixExpr -> PostfixExpr '.' ident               (12)
	PostfixExpr -> PostfixExpr '->' ident              (13)
	UnaryOp -> '&'                                     (14)
	UnaryOp -> '*'                                     (15)
	UnaryOp -> '~'                                     (16)
	UnaryOp -> '!'                                     (17)
	UnaryExpr -> PostfixExpr                           (18)
	UnaryExpr -> UnaryOp UnaryExpr                     (19)
	UnaryExpr -> sizeof UnaryExpr                      (20)
	UnaryExpr -> sizeof '(' ident ')'                  (21)
	CastExpr -> '(' ident ')' CastExpr                 (22)
	CastExpr -> UnaryExpr                              (23)
	MultiplicativeExpr -> CastExpr                     (24)
	MultiplicativeExpr -> MultiplicativeExpr '*' CastExpr   (25)
	MultiplicativeExpr -> MultiplicativeExpr '/' CastExpr   (26)
	MultiplicativeExpr -> MultiplicativeExpr '%' CastExpr   (27)
	AdditiveExpr -> MultiplicativeExpr                 (28)
	AdditiveExpr -> AdditiveExpr '+' MultiplicativeExpr   (29)
	AdditiveExpr -> AdditiveExpr '-' MultiplicativeExpr   (30)
	ShiftExpr -> AdditiveExpr                          (31)
	ShiftExpr -> ShiftExpr '<<' AdditiveExpr           (32)
	ShiftExpr -> ShiftExpr '>>' AdditiveExpr           (33)
	RelationalExpr -> ShiftExpr                        (34)
	RelationalExpr -> RelationalExpr '<' ShiftExpr     (35)
	RelationalExpr -> RelationalExpr '>' ShiftExpr     (36)
	RelationalExpr -> RelationalExpr '<=' ShiftExpr    (37)
	RelationalExpr -> RelationalExpr '>=' ShiftExpr    (38)
	EqualityExpr -> RelationalExpr                     (39)
	EqualityExpr -> EqualityExpr '==' RelationalExpr   (40)
	EqualityExpr -> EqualityExpr '!=' RelationalExpr   (41)
	AndExpr -> EqualityExpr                            (42)
	AndExpr -> AndExpr '&' EqualityExpr                (43)
	XorExpr -> AndExpr                                 (44)
	XorExpr -> XorExpr '^' AndExpr                     (45)
	OrExpr -> XorExpr                                  (46)
	OrExpr -> OrExpr '|' XorExpr                       (47)
	LAndExpr -> OrExpr                                 (48)
	LAndExpr -> LAndExpr '&&' OrExpr                   (49)
	LOrExpr -> LAndExpr                                (50)
	LOrExpr -> LOrExpr '||' LAndExpr                   (51)
	ConditionalExpr -> LOrExpr                         (52)
	AssignmentExpr -> ConditionalExpr                  (53)
	AssignmentExpr -> AssignmentExpr '=' ConditionalExpr   (54)
	ArgExprList -> AssignmentExpr                      (55)
	ArgExprList -> ArgExprList ',' AssignmentExpr      (56)
	Expr -> AssignmentExpr                             (57)
	Expr -> Expr ',' AssignmentExpr                    (58)
	Declaration -> DeclarationSpecifiers InitDeclarationList ';'   (59)
	Declaration -> DeclarationSpecifiers ';'           (60)
	DeclarationSpecifiers -> StorageClassSpecifier DeclarationSpecifiers   (61)
	DeclarationSpecifiers -> StorageClassSpecifier     (62)
	DeclarationSpecifiers -> TypeSpecifier DeclarationSpecifiers   (63)
	DeclarationSpecifiers -> TypeSpecifier             (64)
	DeclarationSpecifiers -> TypeQualifier DeclarationSpecifiers   (65)
	DeclarationSpecifiers -> TypeQualifier             (66)
	DeclarationSpecifiers -> FunctionSpecifier DeclarationSpecifiers   (67)
	DeclarationSpecifiers -> FunctionSpecifier         (68)
	InitDeclarationList -> InitDeclarator              (69)
	InitDeclarationList -> InitDeclarationList ',' InitDeclarator   (70)
	InitDeclarator -> Declarator                       (71)
	InitDeclarator -> Declarator '=' Initializer       (72)
	StorageClassSpecifier -> extern                    (73)
	StorageClassSpecifier -> static                    (74)
	TypeSpecifier -> void                              (75)
	TypeSpecifier -> char                              (76)
	TypeSpecifier -> short                             (77)
	TypeSpecifier -> int                               (78)
	TypeSpecifier -> long                              (79)
	TypeSpecifier -> float                             (80)
	TypeSpecifier -> double                            (81)
	TypeSpecifier -> signed                            (82)
	TypeSpecifier -> unsigned                          (83)
	TypeSpecifier -> uBool                             (84)
	TypeSpecifier -> uComplex                          (85)
	TypeSpecifier -> uImaginary                        (86)
	TypeSpecifier -> ident                             (87)
	TypeQualifier -> const                             (88)
	FunctionSpecifier -> inline                        (89)
	StructOrUnionSpecifiers -> StructOrUnion ident '{' StructDeclarationList '}'   (90)
	StructOrUnionSpecifiers -> StructOrUnion '{' StructDeclarationList '}'   (91)
	StructOrUnionSpecifiers -> StructOrUnion ident     (92)
	StructOrUnion -> struct                            (93)
	StructOrUnion -> union                             (94)
	StructDeclarationList -> StructDeclaration         (95)
	StructDeclarationList -> StructDeclarationList StructDeclaration   (96)
	StructDeclaration -> SpecifierQualifierList StructDeclaratorList   (97)
	StructDeclaratorList -> StructDeclarator           (98)
	StructDeclaratorList -> StructDeclaratorList ',' StructDeclarator   (99)
	SpecifierQualifierList -> SpecifierQualifierListI   (100)
	SpecifierQualifierListI -> TypeSpecifier SpecifierQualifierListI   (101)
	SpecifierQualifierListI -> TypeQualifier SpecifierQualifierListI   (102)
	SpecifierQualifierListI -> TypeSpecifier           (103)
	SpecifierQualifierListI -> TypeQualifier           (104)
	StructDeclarator -> Declarator                     (105)
	StructDeclarator -> Declarator ':' Expr            (106)
	EnumSpecifier -> enum ident '{' EnumeratorList '}'   (107)
	EnumSpecifier -> enum '{' EnumeratorList '}'       (108)
	EnumSpecifier -> enum ident '{' EnumeratorList ',' '}'   (109)
	EnumSpecifier -> enum '{' EnumeratorList ',' '}'   (110)
	EnumSpecifier -> enum ident                        (111)
	EnumeratorList -> EnumeratorListI                  (112)
	EnumeratorListI -> Enumerator                      (113)
	EnumeratorListI -> EnumeratorListI ',' Enumerator   (114)
	Enumerator -> ident                                (115)
	Enumerator -> ident '=' Expr                       (116)
	Declarator -> Pointer DirectDeclarator             (117)
	Declarator -> DirectDeclarator                     (118)
	DirectDeclarator -> ident                          (119)
	DirectDeclarator -> DirectDeclarator '[' TypeQualifierList AssignmentExpr ']'   (120)
	DirectDeclarator -> DirectDeclarator '[' TypeQualifierList '*' ']'   (121)
	DirectDeclarator -> DirectDeclarator '[' TypeQualifierList ']'   (122)
	DirectDeclarator -> DirectDeclarator '[' static TypeQualifierList AssignmentExpr ']'   (123)
	DirectDeclarator -> DirectDeclarator '[' static AssignmentExpr ']'   (124)
	DirectDeclarator -> DirectDeclarator '[' AssignmentExpr ']'   (125)
	DirectDeclarator -> DirectDeclarator '[' '*' ']'   (126)
	DirectDeclarator -> DirectDeclarator '[' ']'       (127)
	DirectDeclarator -> '(' Declarator ')'             (128)
	DirectDeclarator -> DirectDeclarator '(' ParameterTypeList ')'   (129)
	DirectDeclarator -> DirectDeclarator '(' IdentifierList ')'   (130)
	DirectDeclarator -> DirectDeclarator '(' ')'       (131)
	Pointer -> '*' TypeQualifierList Pointer           (132)
	Pointer -> '*' TypeQualifierList                   (133)
	Pointer -> '*' Pointer                             (134)
	Pointer -> '*'                                     (135)
	TypeQualifierList -> TypeQualifierListI            (136)
	TypeQualifierListI -> TypeQualifier                (137)
	TypeQualifierListI -> TypeQualifierListI TypeQualifier   (138)
	ParameterTypeList -> ParameterList                 (139)
	ParameterList -> ParameterListI                    (140)
	ParameterListI -> ParameterDeclaration             (141)
	ParameterListI -> ParameterListI ',' ParameterDeclaration   (142)
	ParameterDeclaration -> DeclarationSpecifiers Declarator   (143)
	ParameterDeclaration -> DeclarationSpecifiers AbstractDeclarator   (144)
	IdentifierList -> IdentifierListI                  (145)
	IdentifierListI -> ident                           (146)
	IdentifierListI -> IdentifierListI ',' ident       (147)
	TypeName -> SpecifierQualifierList AbstractDeclarator   (148)
	TypeName -> SpecifierQualifierList                 (149)
	AbstractDeclarator -> Pointer                      (150)
	AbstractDeclarator -> Pointer DirectAbstractDeclarator   (151)
	AbstractDeclarator -> DirectAbstractDeclarator     (152)
	DirectAbstractDeclarator -> '(' AbstractDeclarator ')'   (153)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '[' AssignmentExpr ']'   (154)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '[' ']'   (155)
	DirectAbstractDeclarator -> '[' AssignmentExpr ']'   (156)
	DirectAbstractDeclarator -> '[' ']'                (157)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '[' '*' ']'   (158)
	DirectAbstractDeclarator -> '[' '*' ']'            (159)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '(' ParameterTypeList ')'   (160)
	DirectAbstractDeclarator -> DirectAbstractDeclarator '(' ')'   (161)
	DirectAbstractDeclarator -> '(' ParameterTypeList ')'   (162)
	DirectAbstractDeclarator -> '(' ')'                (163)
	TypedefName -> ident                               (164)
	Initializer -> AssignmentExpr                      (165)
	Initializer -> '{' InitializerList '}'             (166)
	Initializer -> '{' InitializerList ',' '}'         (167)
	InitializerList -> InitializerListI                (168)
	InitializerListI -> Designation Initializer        (169)
	InitializerListI -> Initializer                    (170)
	InitializerListI -> InitializerListI ',' Designation Initializer   (171)
	InitializerListI -> InitializerListI ',' Initializer   (172)
	Designation -> DesignatorList '='                  (173)
	DesignatorList -> DesignatorListI                  (174)
	DesignatorListI -> Designator                      (175)
	DesignatorListI -> DesignatorListI Designator      (176)
	Designator -> '[' Expr ']'                         (177)
	Designator -> '.' ident                            (178)
	Statement -> LabeledStatement                      (179)
	Statement -> CompoundStatement                     (180)
	Statement -> ExpressionStatement                   (181)
	Statement -> SelectionStatement                    (182)
	Statement -> IterationStatement                    (183)
	Statement -> JumpStatement                         (184)
	LabeledStatement -> ident ':' Statement            (185)
	LabeledStatement -> case Expr ':' Statement        (186)
	LabeledStatement -> default ':' Statement          (187)
	CompoundStatement -> '{' BlockItemList '}'         (188)
	CompoundStatement -> '{' '}'                       (189)
	BlockItemList -> BlockItem                         (190)
	BlockItemList -> BlockItemList BlockItem           (191)
	BlockItem -> Declaration                           (192)
	BlockItem -> Statement                             (193)
	ExpressionStatement -> Expr ';'                    (194)
	ExpressionStatement -> ';'                         (195)
	SelectionStatement -> if '(' Expr ')' Statement    (196)
	SelectionStatement -> if '(' Expr ')' Statement else Statement   (197)
	SelectionStatement -> switch '(' Expr ')' Statement   (198)
	IterationStatement -> while '(' Expr ')' Statement   (199)
	IterationStatement -> do Statement while '(' Expr ')' ';'   (200)
	JumpStatement -> goto ident ';'                    (201)
	JumpStatement -> continue ';'                      (202)
	JumpStatement -> break ';'                         (203)
	JumpStatement -> return ';'                        (204)
	JumpStatement -> return Expr ';'                   (205)
	ExternalDeclaration -> FunctionDefinition          (206)
	ExternalDeclaration -> Declaration                 (207)
	FunctionDefinition -> DeclarationSpecifiers Declarator DeclarationList CompoundStatement   (208)
	FunctionDefinition -> DeclarationSpecifiers Declarator CompoundStatement   (209)
	DeclarationList -> Declaration                     (210)
	DeclarationList -> DeclarationList Declaration     (211)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	ident          { Ident $$ }
	literal        { Lit $$ }
	break          { Break }
	case           { Case }
	const          { Const }
	while          { While }
	for            { For }
	else           { Else }
	goto           { Goto }
	if             { If }
	return         { Return }
	sizeof         { Sizeof }
	struct         { Struct }
	switch         { Switch }
	union          { Union }
	void           { Void }
	static         { Static }
	inline         { Inline }
	extern         { Extern }
	enum           { Enum }
	default        { Default }
	do             { Do }
	continue       { Continue }
	char           { TChar }
	short          { TShort }
	int            { TInt }
	long           { TLong }
	float          { TFloat }
	double         { TDouble }
	signed         { TSigned }
	unsigned       { TUnsigned }
	uBool          { TuBool }
	uComplex       { TuComplex }
	uImaginary     { TuImaginary }
	'{'            { LBrace }
	'}'            { RBrace }
	'('            { LParen }
	')'            { RParen }
	'['            { LBrack }
	']'            { RBrack }
	'->'           { Arrow }
	'&'            { BitAnd }
	'|'            { BitOr }
	'*'            { Times }
	'+'            { Plus }
	'-'            { Minus }
	'~'            { Compliment }
	'!'            { Not }
	'/'            { Divide }
	'%'            { Modulo }
	'<<'           { LShift }
	'>>'           { RShift }
	'<'            { Lt }
	'<='           { Le }
	'>'            { Gt }
	'>='           { Ge }
	'=='           { Eq }
	'!='           { Neq }
	'^'            { BitXor }
	'&&'           { LAnd }
	'||'           { LOr }
	';'            { Semi }
	'='            { Assign }
	','            { Comma }
	'.'            { Dot }
	':'            { Colon }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_clike    rule  0
	TranslationUnit rule  1
	TranslationUnitI rules 2, 3
	ConstExpr       rule  4
	PrimaryExpr     rules 5, 6, 7
	PostfixExpr     rules 8, 9, 10, 11, 12, 13
	UnaryOp         rules 14, 15, 16, 17
	UnaryExpr       rules 18, 19, 20, 21
	CastExpr        rules 22, 23
	MultiplicativeExpr rules 24, 25, 26, 27
	AdditiveExpr    rules 28, 29, 30
	ShiftExpr       rules 31, 32, 33
	RelationalExpr  rules 34, 35, 36, 37, 38
	EqualityExpr    rules 39, 40, 41
	AndExpr         rules 42, 43
	XorExpr         rules 44, 45
	OrExpr          rules 46, 47
	LAndExpr        rules 48, 49
	LOrExpr         rules 50, 51
	ConditionalExpr rule  52
	AssignmentExpr  rules 53, 54
	ArgExprList     rules 55, 56
	Expr            rules 57, 58
	Declaration     rules 59, 60
	DeclarationSpecifiers rules 61, 62, 63, 64, 65, 66, 67, 68
	InitDeclarationList rules 69, 70
	InitDeclarator  rules 71, 72
	StorageClassSpecifier rules 73, 74
	TypeSpecifier   rules 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87
	TypeQualifier   rule  88
	FunctionSpecifier rule  89
	StructOrUnionSpecifiers rules 90, 91, 92
	StructOrUnion   rules 93, 94
	StructDeclarationList rules 95, 96
	StructDeclaration rule  97
	StructDeclaratorList rules 98, 99
	SpecifierQualifierList rule  100
	SpecifierQualifierListI rules 101, 102, 103, 104
	StructDeclarator rules 105, 106
	EnumSpecifier   rules 107, 108, 109, 110, 111
	EnumeratorList  rule  112
	EnumeratorListI rules 113, 114
	Enumerator      rules 115, 116
	Declarator      rules 117, 118
	DirectDeclarator rules 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, 131
	Pointer         rules 132, 133, 134, 135
	TypeQualifierList rule  136
	TypeQualifierListI rules 137, 138
	ParameterTypeList rule  139
	ParameterList   rule  140
	ParameterListI  rules 141, 142
	ParameterDeclaration rules 143, 144
	IdentifierList  rule  145
	IdentifierListI rules 146, 147
	TypeName        rules 148, 149
	AbstractDeclarator rules 150, 151, 152
	DirectAbstractDeclarator rules 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, 163
	TypedefName     rule  164
	Initializer     rules 165, 166, 167
	InitializerList rule  168
	InitializerListI rules 169, 170, 171, 172
	Designation     rule  173
	DesignatorList  rule  174
	DesignatorListI rules 175, 176
	Designator      rules 177, 178
	Statement       rules 179, 180, 181, 182, 183, 184
	LabeledStatement rules 185, 186, 187
	CompoundStatement rules 188, 189
	BlockItemList   rules 190, 191
	BlockItem       rules 192, 193
	ExpressionStatement rules 194, 195
	SelectionStatement rules 196, 197, 198
	IterationStatement rules 199, 200
	JumpStatement   rules 201, 202, 203, 204, 205
	ExternalDeclaration rules 206, 207
	FunctionDefinition rules 208, 209
	DeclarationList rules 210, 211

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_clike -> . TranslationUnit                   (rule 0)

	ident          shift, and enter state 11
	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27

	TranslationUnitgoto state 28
	TranslationUnitIgoto state 2
	Declaration    goto state 3
	DeclarationSpecifiersgoto state 4
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8
	ExternalDeclarationgoto state 9
	FunctionDefinitiongoto state 10

State 1

	TranslationUnit -> . TranslationUnitI               (rule 1)

	ident          shift, and enter state 11
	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27

	TranslationUnitIgoto state 2
	Declaration    goto state 3
	DeclarationSpecifiersgoto state 4
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8
	ExternalDeclarationgoto state 9
	FunctionDefinitiongoto state 10

State 2

	TranslationUnit -> TranslationUnitI .               (rule 1)
	TranslationUnitI -> TranslationUnitI . ExternalDeclaration    (rule 3)

	ident          shift, and enter state 11
	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27
	%eof           reduce using rule 1

	Declaration    goto state 3
	DeclarationSpecifiersgoto state 4
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8
	ExternalDeclarationgoto state 42
	FunctionDefinitiongoto state 10

State 3

	ExternalDeclaration -> Declaration .                (rule 207)

	ident          reduce using rule 207
	const          reduce using rule 207
	void           reduce using rule 207
	static         reduce using rule 207
	inline         reduce using rule 207
	extern         reduce using rule 207
	char           reduce using rule 207
	short          reduce using rule 207
	int            reduce using rule 207
	long           reduce using rule 207
	float          reduce using rule 207
	double         reduce using rule 207
	signed         reduce using rule 207
	unsigned       reduce using rule 207
	uBool          reduce using rule 207
	uComplex       reduce using rule 207
	uImaginary     reduce using rule 207
	%eof           reduce using rule 207


State 4

	Declaration -> DeclarationSpecifiers . InitDeclarationList ';'    (rule 59)
	Declaration -> DeclarationSpecifiers . ';'          (rule 60)
	FunctionDefinition -> DeclarationSpecifiers . Declarator DeclarationList CompoundStatement    (rule 208)
	FunctionDefinition -> DeclarationSpecifiers . Declarator CompoundStatement    (rule 209)

	ident          shift, and enter state 38
	'('            shift, and enter state 39
	'*'            shift, and enter state 40
	';'            shift, and enter state 41

	InitDeclarationListgoto state 33
	InitDeclarator goto state 34
	Declarator     goto state 35
	DirectDeclaratorgoto state 36
	Pointer        goto state 37

State 5

	DeclarationSpecifiers -> StorageClassSpecifier . DeclarationSpecifiers    (rule 61)
	DeclarationSpecifiers -> StorageClassSpecifier .    (rule 62)

	ident          shift, and enter state 11
			(reduce using rule 62)

	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27
	'('            reduce using rule 62
	'['            reduce using rule 62
	'*'            reduce using rule 62
	';'            reduce using rule 62

	DeclarationSpecifiersgoto state 32
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8

State 6

	DeclarationSpecifiers -> TypeSpecifier . DeclarationSpecifiers    (rule 63)
	DeclarationSpecifiers -> TypeSpecifier .            (rule 64)

	ident          shift, and enter state 11
			(reduce using rule 64)

	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27
	'('            reduce using rule 64
	'['            reduce using rule 64
	'*'            reduce using rule 64
	';'            reduce using rule 64

	DeclarationSpecifiersgoto state 31
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8

State 7

	DeclarationSpecifiers -> TypeQualifier . DeclarationSpecifiers    (rule 65)
	DeclarationSpecifiers -> TypeQualifier .            (rule 66)

	ident          shift, and enter state 11
			(reduce using rule 66)

	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27
	'('            reduce using rule 66
	'['            reduce using rule 66
	'*'            reduce using rule 66
	';'            reduce using rule 66

	DeclarationSpecifiersgoto state 30
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8

State 8

	DeclarationSpecifiers -> FunctionSpecifier . DeclarationSpecifiers    (rule 67)
	DeclarationSpecifiers -> FunctionSpecifier .        (rule 68)

	ident          shift, and enter state 11
			(reduce using rule 68)

	const          shift, and enter state 12
	void           shift, and enter state 13
	static         shift, and enter state 14
	inline         shift, and enter state 15
	extern         shift, and enter state 16
	char           shift, and enter state 17
	short          shift, and enter state 18
	int            shift, and enter state 19
	long           shift, and enter state 20
	float          shift, and enter state 21
	double         shift, and enter state 22
	signed         shift, and enter state 23
	unsigned       shift, and enter state 24
	uBool          shift, and enter state 25
	uComplex       shift, and enter state 26
	uImaginary     shift, and enter state 27
	'('            reduce using rule 68
	'['            reduce using rule 68
	'*'            reduce using rule 68
	';'            reduce using rule 68

	DeclarationSpecifiersgoto state 29
	StorageClassSpecifiergoto state 5
	TypeSpecifier  goto state 6
	TypeQualifier  goto state 7
	FunctionSpecifiergoto state 8

State 9

	TranslationUnitI -> ExternalDeclaration .           (rule 2)

	ident          reduce using rule 2
	const          reduce using rule 2
	void           reduce using rule 2
	static         reduce using rule 2
	inline         reduce using rule 2
	extern         reduce using rule 2
	char           reduce using rule 2
	short          reduce using rule 2
	int            reduce using rule 2
	long           reduce using rule 2
	float          reduce using rule 2
	double         reduce using rule 2
	signed         reduce using rule 2
	unsigned       reduce using rule 2
	uBool          reduce using rule 2
	uComplex       reduce using rule 2
	uImaginary     reduce using rule 2
	%eof           reduce using rule 2


State 10

	ExternalDeclaration -> FunctionDefinition .         (rule 206)

	ident          reduce using rule 206
	const          reduce using rule 206
	void           reduce using rule 206
	static         reduce using rule 206
	inline         reduce using rule 206
	extern         reduce using rule 206
	char           reduce using rule 206
	short          reduce using rule 206
	int            reduce using rule 206
	long           reduce using rule 206
	float          reduce using rule 206
	double         reduce using rule 206
	signed         reduce using rule 206
	unsigned       reduce using rule 206
	uBool          reduce using rule 206
	uComplex       reduce using rule 206
	uImaginary     reduce using rule 206
	%eof           reduce using rule 206


State 11

	TypeSpecifier -> ident .                            (rule 87)

	ident          reduce using rule 87
	const          reduce using rule 87
	void           reduce using rule 87
	static         reduce using rule 87
	inline         reduce using rule 87
	extern         reduce using rule 87
	char           reduce using rule 87
	short          reduce using rule 87
	int            reduce using rule 87
	long           reduce using rule 87
	float          reduce using rule 87
	double         reduce using rule 87
	signed         reduce using rule 87
	unsigned       reduce using rule 87
	uBool          reduce using rule 87
	uComplex       reduce using rule 87
	uImaginary     reduce using rule 87
	'('            reduce using rule 87
	'['            reduce using rule 87
	'*'            reduce using rule 87
	';'            reduce using rule 87


State 12

	TypeQualifier -> const .                            (rule 88)

	ident          reduce using rule 88
	literal        reduce using rule 88
	const          reduce using rule 88
	sizeof         reduce using rule 88
	void           reduce using rule 88
	static         reduce using rule 88
	inline         reduce using rule 88
	extern         reduce using rule 88
	char           reduce using rule 88
	short          reduce using rule 88
	int            reduce using rule 88
	long           reduce using rule 88
	float          reduce using rule 88
	double         reduce using rule 88
	signed         reduce using rule 88
	unsigned       reduce using rule 88
	uBool          reduce using rule 88
	uComplex       reduce using rule 88
	uImaginary     reduce using rule 88
	'('            reduce using rule 88
	')'            reduce using rule 88
	'['            reduce using rule 88
	']'            reduce using rule 88
	'&'            reduce using rule 88
	'*'            reduce using rule 88
	'~'            reduce using rule 88
	'!'            reduce using rule 88
	';'            reduce using rule 88
	','            reduce using rule 88


State 13

	TypeSpecifier -> void .                             (rule 75)

	ident          reduce using rule 75
	const          reduce using rule 75
	void           reduce using rule 75
	static         reduce using rule 75
	inline         reduce using rule 75
	extern         reduce using rule 75
	char           reduce using rule 75
	short          reduce using rule 75
	int            reduce using rule 75
	long           reduce using rule 75
	float          reduce using rule 75
	double         reduce using rule 75
	signed         reduce using rule 75
	unsigned       reduce using rule 75
	uBool          reduce using rule 75
	uComplex       reduce using rule 75
	uImaginary     reduce using rule 75
	'('            reduce using rule 75
	'['            reduce using rule 75
	'*'            reduce using rule 75
	';'            reduce using rule 75


State 14

	StorageClassSpecifier -> static .                   (rule 74)

	ident          reduce using rule 74
	const          reduce using rule 74
	void           reduce using rule 74
	static         reduce using rule 74
	inline         reduce using rule 74
	extern         reduce using rule 74
	char           reduce using rule 74
	short          reduce using rule 74
	int            reduce using rule 74
	long           reduce using rule 74
	float          reduce using rule 74
	double         reduce using rule 74
	signed         reduce using rule 74
	unsigned       reduce using rule 74
	uBool          reduce using rule 74
	uComplex       reduce using rule 74
	uImaginary     reduce using rule 74
	'('            reduce using rule 74
	'['            reduce using rule 74
	'*'            reduce using rule 74
	';'            reduce using rule 74


State 15

	FunctionSpecifier -> inline .                       (rule 89)

	ident          reduce using rule 89
	const          reduce using rule 89
	void           reduce using rule 89
	static         reduce using rule 89
	inline         reduce using rule 89
	extern         reduce using rule 89
	char           reduce using rule 89
	short          reduce using rule 89
	int            reduce using rule 89
	long           reduce using rule 89
	float          reduce using rule 89
	double         reduce using rule 89
	signed         reduce using rule 89
	unsigned       reduce using rule 89
	uBool          reduce using rule 89
	uComplex       reduce using rule 89
	uImaginary     reduce using rule 89
	'('            reduce using rule 89
	'['            reduce using rule 89
	'*'            reduce using rule 89
	';'            reduce using rule 89


State 16

	StorageClassSpecifier -> extern .                   (rule 73)

	ident          reduce using rule 73
	const          reduce using rule 73
	void           reduce using rule 73
	static         reduce using rule 73
	inline         reduce using rule 73
	extern         reduce using rule 73
	char           reduce using rule 73
	short          reduce using rule 73
	int            reduce using rule 73
	long           reduce using rule 73
	float          reduce using rule 73
	double         reduce using rule 73
	signed         reduce using rule 73
	unsigned       reduce using rule 73
	uBool          reduce using rule 73
	uComplex       reduce using rule 73
	uImaginary     reduce using rule 73
	'('            reduce using rule 73
	'['            reduce using rule 73
	'*'            reduce using rule 73
	';'            reduce using rule 73


State 17

	TypeSpecifier -> char .                             (rule 76)

	ident          reduce using rule 76
	const          reduce using rule 76
	void           reduce using rule 76
	static         reduce using rule 76
	inline         reduce using rule 76
	extern         reduce using rule 76
	char           reduce using rule 76
	short          reduce using rule 76
	int            reduce using rule 76
	long           reduce using rule 76
	float          reduce using rule 76
	double         reduce using rule 76
	signed         reduce using rule 76
	unsigned       reduce using rule 76
	uBool          reduce using rule 76
	uComplex       reduce using rule 76
	uImaginary     reduce using rule 76
	'('            reduce using rule 76
	'['            reduce using rule 76
	'*'            reduce using rule 76
	';'            reduce using rule 76


State 18

	TypeSpecifier -> short .                            (rule 77)
